@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: show.c,v 1.46 2001/02/13 18:24:17 gtw Exp $
+ * $Id: show.c,v 1.47 2001/02/23 18:12:30 gtw Exp $
  */
 
 #include "config.h"
@@ -663,6 +663,12 @@ extern void CommandShowOutput( char *sz ) {
 
     printf( "Winning chances will be shown as %s.\n", fOutputWinPC ?
 	    "percentages" : "probabilities" );
+
+#if USE_GUI
+    if( !fX )
+#endif
+	printf( "Boards will be shown in %s.\n", fOutputRawboard ?
+		"raw format" : "ASCII" );
 }
 
 extern void CommandShowMarketWindow ( char * sz ) {
